Bug 236368 - Ambiguous shortcut Ctrl+B if File Browser is visible
Summary: Ambiguous shortcut Ctrl+B if File Browser is visible
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: application (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-05-04 21:51 UTC by Roman Shtylman
Modified: 2011-08-13 18:21 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
unsetting this fixes issues with kate (56.96 KB, image/png)
2010-07-02 04:33 UTC, Miguel De Anda
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Shtylman 2010-05-04 21:51:36 UTC
Version:            (using KDE 4.4.2)
OS:                Linux
Installed from:    Ubuntu Packages

When I press Ctrl+B to set a bookmark, a popup comes up with:

The key sequence 'Ctrl+B' is ambiguous. Use 'Configure Shortcuts'
from the 'Settings' menu to solve the ambiguity.
No action will be triggered.

I checked the shortcuts in kate and Ctrl+B is only set once (for set bookmark)
Comment 1 Dominik Haumann 2010-05-09 05:03:48 UTC
As soon as the file system browser is visible this is reproducible.
Comment 2 Miguel De Anda 2010-07-02 04:33:08 UTC
Created attachment 48534 [details]
unsetting this fixes issues with kate

i found that ctrl+b (default for add bookmark) and kate conflicts with this default. i'm not sure where else the ctrl+b gets used but unsetting it fixes a bookmarks issue in kate
Comment 3 Miguel De Anda 2010-07-02 04:35:34 UTC
^^ i was so excited to type that my comment doesn't make sense. what i was trying to say is that the global ctrl+b shortcut for add bookmark, conflicts with kate's ctrl+b for the same feature and shows the "disambiguate" dialog which sends users to a dead-end because there is no second ctrl+b shortcut defined there. it took me awhile to figure this out and i suspect others might get stuck as well.
Comment 4 Dominik Haumann 2010-07-04 13:21:43 UTC
Hi Migue, I already wrote in comment #1 that the file system browser also uses the ctrl+b shortcut. Maybe you don't see it in the configure shortcuts dialog, but this is simple the problem. Hide the file system browser, and you won't have any problems anymore... Unsetting the shortcut for bookmarks is a workaround if you don't use bookmarks, but it's basically the wrong fix.
Comment 5 Dominik Haumann 2011-08-13 18:09:30 UTC
Git commit 2e1d843fa1b17ecf269b6a2e67dacc052e38eb8e by Dominik Haumann.
Committed on 13/08/2011 at 20:05.
Pushed by dhaumann into branch 'master'.

fix ambiguous shortcuts with file browser

BUG: 236368
BUG: 188954

M  +11   -1    kate/plugins/filebrowser/katefilebrowser.cpp

http://commits.kde.org/kate/2e1d843fa1b17ecf269b6a2e67dacc052e38eb8e
Comment 6 Dominik Haumann 2011-08-13 18:21:12 UTC
Git commit 78b998873f43b3b944a43b15216b0e1614443d5d by Dominik Haumann.
Committed on 13/08/2011 at 20:05.
Pushed by dhaumann into branch 'KDE/4.7'.

fix ambiguous shortcuts with file browser

BUG: 236368
BUG: 188954

M  +11   -1    kate/plugins/filebrowser/katefilebrowser.cpp

http://commits.kde.org/kate/78b998873f43b3b944a43b15216b0e1614443d5d