fix ambiguous shortcuts with file browser

BUG: 236368
BUG: 188954